--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
 <!DO,CTYPE html>
 	
 	<body>
-		<p id="poop">This is Craig's test website, please stand by!</p>
+		<p id="test11">Welcome to A.L.F controls</p>
+		<p>Establishing a connection to A.L.F...</p>
 		
 		<input id="clickMe" type="button" value="clickme" onclick="doFunction();" />
+		
+		<aside>
+			
+		</aside>
+		
+		<table style="width:500%">
+			<tr>
+				<td>Test1</td>
+				<td>
+					<iframe width="560" height="315" src="https://www.youtube.com/embed/I9z0LvoFqHg" frameborder="1" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</td>
+			</tr>
+		</table>
 		
 	</body>
 		
@@ -12,11 +26,11 @@
 <script>
 
 	function doFunction(){
-		document.getElementById("poop").innerHTML = "Button clicked!";
+		document.getElementById("test11").innerHTML = "Button clicked!";
 		
 		setTimeout(function test(){
 
-			document.getElementById("poop").innerHTML = "U smel";
+			document.getElementById("test11").innerHTML = "U smel";
 		
 		},2000);
 	}
