--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						</tr>
 						<tr>
 							<td>Honk Horn</td>
-							<td><input id="clickMe" type="button" value="Click" onclick="leftTurn();" /></td>
+							<td><input id="clickMe" type="button" value="Click" onclick="honkHorn();" /></td>
 							<td><p id="horn">---------------------------</p></td>
 						</tr>
 					</table>
