latest update indicator

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<p>A.L.F is still being born, stand by!</p>
 		<p>Their name might even change, we can't decide on a name</p>
 		
+		<p> Latest update : HORN ADDED </p>
+		
 		<table style="width:100%">
 			<tr>
 				<td>
