--- a/index.html
+++ b/index.html
@@ -3,19 +3,24 @@
 	<head>
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
+		
+		<title>Crogbot V1</title>
+		<link href="style.css" rel="stylesheet"/>
 	</head>
 
 	<body>
+		<h1>CrogBot V1</h1>
+	
 		<p id="test11">Welcome to A.L.F control</p>
 		<p>A.L.F is still being born, stand by!</p>
 		<p>Their name might even change, we can't decide on a name</p>
 		
-		<p> Latest update : Status Indicator </p>
+		<p> Latest update : CSS </p>
 		
-		<table style="width:100%">
+		<table id="#t1"style="width:100%" >
 			<tr>
 				<td>
-					<table style="width:50%" border=0>
+					<table style="width:50%" border="3">
 						<tr>
 							<td>Forwards</td>
 							<td><input id="clickMe" type="button" value="Click" onclick="moveForwards();" /></td>
