name change to lily!
little intelligent lollipop yunicorn!

--- a/index.html
+++ b/index.html
@@ -4,15 +4,16 @@
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
 		
-		<title>Crogbot V1</title>
+		<title>LILY V1</title>
 		<link href="style.css" rel="stylesheet"/>
 	</head>
 
 	<body>
-		<h1>CrogBot V1</h1>
+		<h1>LILY V1</h1>
 	
-		<p id="test11">Welcome to CrogBot control.</p>
-		<p>CrogBot currently lacks a body, parts arrive 05/09/2018!</p>
+		<p id="test11">Welcome to LILY control.</p>
+		<p>LILY currently lacks a body, parts arrive 05/09/2018!</p>
+		<p>LILY : The Little Intelligent Lollipop Yunicorn</p>
 		
 		<p> Latest update : Online Status / Servo controls</p>
 		
