lily name change 2

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		
 		<p> Latest update : Online Status / Servo controls</p>
 		
-		<p id="onlineStatus"> IS CROGBOT CURRENTLY ACTIVE? : </p> 
+		<p id="onlineStatus"> IS LILY CURRENTLY ACTIVE? : </p> 
 		
 		<table id="#t1"style="width:150%" >
 			<tr>
