icons and html5 reset

--- a/index.html
+++ b/index.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 
 	<head>
+	
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		
+		<meta name="mobile-web-app-capable" content="yes" />
+		<meta name="apple-mobile-web-app-capable" content="yes" />
+		
+		<link rel="icon" sizes="192x192" href="icon.png" />
+		<link rel="apple-touch-icon" href="icon.png" />
+		<link rel="shortcut icon" href="weeicon.png" type="image/x-icon" />
+	
+	
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
 		
-		<title>LILY Control</title>
+
+	
+		<title>BUTTONS OF DOOM</title>
+		<link href="html5reset.css" rel="stylesheet"/>
 		<link href="style.css" rel="stylesheet"/>
 	</head>
 
