--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<script src='https://cdn.firebase.com/js/client/2.2.1/firebase.js'></script>
 		<script src="https://www.gstatic.com/firebasejs/5.4.2/firebase.js"></script>
 		
+		<script type='text/javascript' src='api_keys.js'></script>
 
 	
 		<title>LILY CONTROL</title>
@@ -42,7 +43,7 @@
 							<td><input id="lefBut" type="button" value="Left" onclick="leftTurn();" /></td>							
 						</tr>
 						<tr style="background-color:#000000">
-							<td><input class="form1" type="number" value="0" max="360" min="0"></td>
+							<td><input class="form1" id="turnInput1" type="number" value="0" max="360" min="0"></td>
 							<td><input class="form1" type="button" value="Submit" onclick="valSubmit();" /></td>
 						</tr>
 						<tr>
@@ -79,7 +80,7 @@
 <script>
 
 	var config = {
-		apiKey: "AIzaSyA6pk5vRkVWlQRXKOjLJ_khMUMvGnTzlkQ",
+		apiKey: api_keys.FIREBASE_KEY,
 		authDomain: "crogobot.firebaseapp.com",
 		databaseURL: "https://crogobot.firebaseio.com",
 		projectId: "crogobot",
@@ -210,9 +211,9 @@
 
 	function valSubmit(){
 	
-		var input = parseInt(document.getElementById("form1").value, 10);
+		var input = parseInt(document.getElementById("turnInput1").value, 10);
 		
-		
+		console.log("Submitted : " + input);
 		
 	
 	}
